# budgetTracking

./: .gitignore  README.md  add_sample_data.py  add_test_data.py  api-test.html  check_dates.py  check_db.py  reset_password.py  test_dashboard.py
backend/: .env.example  POSTGRESQL_SETUP.md  alembic.ini  auth_diagnostic.py  budget.db  build.sh  build_fullstack.sh  build_render_fullstack.sh  build_simple.sh  check_db.py  check_deploy.py  create_admin.py  debug_test.py  deploy.py  emergency_db_fix.sh  final_db_fix.py  fix_database.sql  fix_db_urgent.py  fix_production.sh  fix_spending_columns.py  fix_spending_columns.sql  force_admin.py  init_db.py  migrate_db.py  migrate_labels.py  pyproject.toml  quick_deploy.py  requirements.txt  run_migration.py  setup_database.py  setup_users.py  simple_db_fix.py  start.py  start_fullstack.py  temp_create_admin.py  test_api.py
backend/alembic/: env.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  static.py
backend/app/routers/: admin.py  auth.py  currency.py  health.py  labels.py  spendings.py  users.py
backend/app/services/: currency.py
backend/migrations/versions/: 002_add_currency_support.py  003_add_missing_spending_columns.py
backend/scripts/: render_fix_schema.py  run_schema_heal.py  test_labels_runtime_fix.py
backend/static/: index.html
backend/static/assets/: index-1Fp_WKWR.css  index-l6Xw6RMt.js
backend/tests/: test_health.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: currency.ts  index.ts
frontend/src/config/: api.ts
(+24 files in other folders)
